added another section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     .font-manrope{
   font-family: "Manrope", sans-serif;
 }
-
+    .font-color{
+      color:#494949;
+    }
+    
    </style>
 </head>
 <body class="font-manrope">
@@ -96,11 +99,11 @@
           </div>
           <!-- div-2 -->
           <div>
-            <h1 class="text-4xl md:text-6xl text-black font-extrabold text-center mb-4 md:mb-8">A barn house of this design has a <br> striking appearance</h1>
+            <h1 class="text-3xl md:text-6xl text-black font-extrabold text-center mb-4 md:mb-8">A barn house of this design has a <br> striking appearance</h1>
 
-            <p class="text-center mb-8">Transforming visions into iconic spaces. Explore our innovative designs that blend functionality with aesthetics, <br> shaping the future one project at a time.</p>
+            <p class="text-center mb-8 font-color">Transforming visions into iconic spaces. Explore our innovative designs that blend functionality with aesthetics, <br> shaping the future one project at a time.</p>
 
-            <a class="bg-[#b6f371] px-6 md:px-4 py-2 rounded-2xl font-bold text-xl mx-12 md:mx-96">
+            <a class="bg-[#b6f371] px-6 md:px-4 py-2 rounded-2xl font-bold text-xl mx-12 md:mx-96 ">
               View Details <i class="fa-solid fa-arrow-right -rotate-45"></i>
             </a>
 
@@ -122,7 +125,7 @@
         <!-- div-1 -->
         <div>
           <img class="mx-40" src="assets/Vector.png" alt="">
-          <p class="mx-60 mt-2 font-bold mb-4"> <i class="fa-solid fa-arrow-right"></i> About Us</p>
+          <p class="mx-20 md:mx-60 mt-2 font-bold mb-4"> <i class="fa-solid fa-arrow-right"></i> About Us</p>
           <!-- div-1 -->
         </div>
 
@@ -131,15 +134,15 @@
 
           <div>
            <h1 class="font-extrabold text-4xl mx-40 text-black mb-4">We design thoughtful, <br> liveable spaces</h1>
-           <p class="mx-40 mb-4">Our approach focuses on creating environments that are not only aesthetically pleasing but also enhance everyday living.</p>
+           <p class="mr-4 mx-40 mb-4 font-color">Our approach focuses on creating environments that are not only aesthetically pleasing but also enhance everyday living.</p>
 
-           <div class="flex mx-40">
+           <div class="flex mx-40 pt-5">
 
            <div> <img src="assets/commercial.png" alt=""> </div>
 
-          <div>
+          <div class="pl-5">
             <h1 class="font-bold">Commercial</h1>
-            <p class="mb-4">Discover stunning projects, innovative designs, <br> and sustainable solutions.</p>
+            <p class="mb-4 font-color">Discover stunning projects, innovative designs, <br> and sustainable solutions.</p>
           </div>
 
            </div>
@@ -148,9 +151,9 @@
 
             <div> <img src="assets/residential.png" alt=""> </div>
 
-           <div>
+           <div class="pl-5">
             <h1 class="font-bold">Residential</h1>
-            <p class="">Discover stunning projects, innovative designs, <br> and sustainable solutions.</p>
+            <p class="font-color">Discover stunning projects, innovative designs, <br> and sustainable solutions.</p>
            </div>
 
            </div>
@@ -164,6 +167,61 @@
 
          <!-- parent div-3 -->
        </div>
+
+       <!-- section no.4 starts here -->
+        <section>
+          <!-- parent div-4 -->
+           <div>
+             <!-- div-1 -->
+          <div class="text-center my-10">
+            <h6 class="font-bold text-sm pb-4"> <i class="fa-solid fa-arrow-right pr-1"></i> How we Work</h6>
+            <h1 class="font-extrabold text-black text-4xl">Our Work Process</h1>
+            <p class="mt-4 font-color">Elevate Your Architectural Brand Online. Our expert team crafts visually stunning, user-friendly <br> websites that showcase your unique architectural vision. </p>
+            <!-- div-1 -->
+          </div>
+
+          <!-- div-2 -->
+           <div class="mb-12 grid grid-cols-4 mx-14">
+
+            <!-- div-1-1 concept-->
+            <div class="border bg-[#E7C1D3] w-72 h-52 rounded-2xl  pl-4">
+              <div class="mb-2 mt-4"> <img src="assets/concept.png" alt=""></div>
+              <h1 class="font-extrabold text-black text-xl mb-2">Concept</h1>
+              <p class="font-color">Craft Your Architectural Vision. A team of experts will transform your ideas into captivating websites. </p>
+              <!-- div-1-1 concept-->
+            </div>
+
+             <!-- div-1-2 design process-->
+            <div class="border bg-[#EFDA6E] w-72 h-52 rounded-2xl  pl-4">
+              <div class="mb-2 mt-4"> <img src="assets/flow-chart.png" alt=""></div>
+              <h1 class="font-extrabold text-black text-xl bg mb-2">Design Process</h1>
+              <p class="font-color">We'll work closely with you to understand your design preferences, and create layouts. </p>
+               <!-- div-1-2 design process-->
+            </div>
+
+             <!-- div-1-3 super vision -->
+            <div class="border bg-[#A4DAC3] w-72 h-52 rounded-2xl  pl-4">
+              <div class="mb-2 mt-4"> <img src="assets/vision.png" alt=""></div>
+              <h1 class="font-extrabold text-black text-xl bg mb-2">Super Vision</h1>
+              <p class="font-color">Craft Your Architectural Vision. A team of experts will transform your ideas into captivating websites. </p>
+              <!-- div-1-3 super vision -->
+            </div>
+
+            <!-- div-1-4 budget planning -->
+            <div class="border bg-[#77AAEA] w-72 h-52 rounded-2xl pl-4">
+              <div class="mb-2 mt-4"> <img src="assets/budget-planning.png" alt=""></div>
+              <h1 class="font-extrabold text-black text-xl bg mb-2">Budget Planning</h1>
+              <p class="font-color">Craft Your Architectural Vision. A team of experts will transform your ideas into captivating websites. </p>
+            <!-- div-1-4 budget planning -->
+            </div>
+
+             <!-- div-2 -->
+           </div>
+
+            <!-- parent div-4 -->
+           </div>
+          <!-- section no.4 ends here -->
+        </section>
     </main>
     <!-- footer part starts here -->
      <footer>
