--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </ul>
               </div>
 
-              <h1 class="text-3xl font-extrabold mx-auto"> <i class="fa-solid fa-arrow-right text-black -rotate-45 px-2 py-2 rounded-full bg-[#ABEF5F]"></i> Rinterio</h1>
+              <h1 class="text-3xl font-extrabold mx-24 flex md:mx-auto"> <i class="fa-solid fa-arrow-right text-black -rotate-45 px-2 py-2  mx-2 rounded-full bg-[#ABEF5F]"></i> Rinterio</h1>
             </div>
 
             <div class="navbar-center hidden lg:flex">
@@ -86,7 +86,7 @@
             <div class="navbar-end">
 
               <!-- search icon -->
-              <div class="bg-white border px-3 py-3 rounded-full mr-4">
+              <div class="bg-white border px-3 py-3 hidden md:block rounded-full mr-4">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                 </svg>
@@ -94,7 +94,7 @@
                </div>
 
               <!-- shopping cart icon -->
-              <div class="bg-white border rounded-full py-3 px-3 mr-4">
+              <div class="bg-white border rounded-full py-3 px-3 mr-4 hidden md:block">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                 </svg>
@@ -132,7 +132,7 @@
 
             <!-- div 2-1 -->
             <div class="text-center">
-              <a class="bg-[#ABEF5F80] px-6 md:px-4 py-3 rounded-3xl font-bold text-xl mx-12 md:mx-96">
+              <a class="bg-[#ABEF5F80] px-16 md:px-4 py-3 rounded-3xl font-bold text-xl md:mx-96">
                 View Details <i class="fa-solid  bg-[#ABEF5F] fa-arrow-right -rotate-45 px-2 py-2 rounded-full"></i>
                 </a>
                 <!-- div 2-1 -->
@@ -153,12 +153,13 @@
       <!-- section no.3 starts here -->
       <section>
          <!-- parent div-3 -->
-       <div class="my-20">
+       <div class="my-20 bg-gray-100">
 
         <!-- div-1 -->
         <div>
-          <img class="mx-20" src="assets/Vector.png" alt="">
-          <p class="mx-20 md:mx-40 mt-2 font-bold mb-4 bg-white border w-36 text-center py-2 rounded-full"> <i class="fa-solid fa-arrow-right"></i> About Us</p>
+          <img class=" hidden md:block mx-20" src="assets/Vector.png" alt="">
+
+          <p class="mx-20 md:mx-20 md:mx-40 mt-2 font-bold mb-4 bg-white border w-36 text-center py-2 rounded-full"> <i class="fa-solid fa-arrow-right"></i> About Us</p>
           <!-- div-1 -->
         </div>
 
@@ -166,30 +167,32 @@
          <div class="flex">
 
           <div>
-           <h1 class="font-extrabold text-4xl mx-40 text-black mb-4">We design thoughtful, <br> liveable spaces</h1>
+           <h1 class="font-extrabold text-4xl mx-16 md:mx-40 text-black mb-4">We design thoughtful, <br> liveable spaces</h1>
            <p class="mr-4 mx-40 mb-4 font-color">Our approach focuses on creating environments that are not only aesthetically pleasing but also enhance everyday living.</p>
 
-           <div class="flex mx-40 pt-5">
+           <!-- Commercial -->
+           <div class="flex mx-40 pt-5 bg-white rounded-xl shadow border">
 
-           <div> <img src="assets/commercial.png" alt=""> </div>
+           <div class="pl-4"> <img src="assets/commercial.png" alt=""> </div>
 
           <div class="pl-5">
-            <h1 class="font-bold">Commercial</h1>
+            <h1 class="font-bold text-lg">Commercial</h1>
             <p class="mb-5 pt-2 font-color">Discover stunning projects, innovative designs, <br> and sustainable solutions.</p>
           </div>
-
+          <!-- Commercial -->
            </div>
 
-           <div class="flex mx-40 my-4">
+           <!-- Residential -->
+           <div class="flex mx-40 pt-5 bg-white rounded-xl shadow border mt-6">
 
-            <div> <img src="assets/residential.png" alt=""> </div>
-
+            <div class="pl-4"> <img src="assets/residential.png" alt=""> </div>
+ 
            <div class="pl-5">
-            <h1 class="font-bold">Residential</h1>
-            <p class="font-color pt-2">Our stunning projects, innovative designs, and <br> sustainable solutions are at high level.</p>
+             <h1 class="font-bold text-lg">Residential</h1>
+             <p class="mb-5 pt-2 font-color">Our stunning projects, innovative designs, and <br> sustainable solutions are at high level.</p>
            </div>
-
-           </div>
+           <!-- Residential -->
+            </div>
 
           </div>
 
@@ -200,16 +203,16 @@
 
          <!-- parent div-3 -->
        </div>
-       <!-- section no.3 starts here -->
+       <!-- section no.3 ends here -->
       </section>
 
        <!-- section no.4 starts here -->
         <section>
           <!-- parent div-4 -->
-           <div>
+           <div class="bg-gray-100">
              <!-- div-1 -->
           <div class="text-center my-10">
-            <h6 class="font-bold text-sm pb-4"> <i class="fa-solid fa-arrow-right pr-1"></i> How we Work</h6>
+            <h6 class="font-bold text-sm pb-2 bg-white border w-36 mx-auto py-2 mb-4 rounded-full"> <i class="fa-solid fa-arrow-right pr-1"></i> How we Work</h6>
             <h1 class="font-extrabold text-black text-4xl">Our Work Process</h1>
             <p class="mt-4 font-color">Elevate Your Architectural Brand Online. Our expert team crafts visually stunning, user-friendly <br> websites that showcase your unique architectural vision. </p>
             <!-- div-1 -->
@@ -218,36 +221,36 @@
           <!-- div-2 -->
            <div class="mb-12 grid grid-cols-4 mx-14">
 
-            <!-- div-1-1 concept-->
+            <!-- div-2-1 concept-->
             <div class="border bg-[#E7C1D3] w-72 h-52 rounded-2xl  pl-4">
               <div class="mb-2 mt-4"> <img src="assets/concept.png" alt=""></div>
               <h1 class="font-extrabold text-black text-xl mb-2">Concept</h1>
               <p class="font-color">Craft Your Architectural Vision. A team of experts will transform your ideas into captivating websites. </p>
-              <!-- div-1-1 concept-->
+              <!-- div-2-1 concept-->
             </div>
 
-             <!-- div-1-2 design process-->
+             <!-- div-2-2 design process-->
             <div class="border bg-[#EFDA6E] w-72 h-52 rounded-2xl  pl-4">
               <div class="mb-2 mt-4"> <img src="assets/flow-chart.png" alt=""></div>
               <h1 class="font-extrabold text-black text-xl bg mb-2">Design Process</h1>
               <p class="font-color">We'll work closely with you to understand your design preferences, and create layouts. </p>
-               <!-- div-1-2 design process-->
+               <!-- div-2-2 design process-->
             </div>
 
-             <!-- div-1-3 super vision -->
+             <!-- div-2-3 super vision -->
             <div class="border bg-[#A4DAC3] w-72 h-52 rounded-2xl  pl-4">
               <div class="mb-2 mt-4"> <img src="assets/vision.png" alt=""></div>
               <h1 class="font-extrabold text-black text-xl bg mb-2">Super Vision</h1>
               <p class="font-color">Craft Your Architectural Vision. A team of experts will transform your ideas into captivating websites. </p>
-              <!-- div-1-3 super vision -->
+              <!-- div-2-3 super vision -->
             </div>
 
-            <!-- div-1-4 budget planning -->
+            <!-- div-2-4 budget planning -->
             <div class="border bg-[#77AAEA] w-72 h-52 rounded-2xl pl-4">
               <div class="mb-2 mt-4"> <img src="assets/budget-planning.png" alt=""></div>
               <h1 class="font-extrabold text-black text-xl bg mb-2">Budget Planning</h1>
               <p class="font-color">Craft Your Architectural Vision. A team of experts will transform your ideas into captivating websites. </p>
-            <!-- div-1-4 budget planning -->
+            <!-- div-2-4 budget planning -->
             </div>
 
              <!-- div-2 -->
