--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div>
           <img class=" hidden md:block mx-20" src="assets/Vector.png" alt="">
 
-          <p class="mx-20 md:mx-20 md:mx-40 mt-2 font-bold mb-4 bg-white border w-36 text-center py-2 rounded-full"> <i class="fa-solid fa-arrow-right"></i> About Us</p>
+          <p class="mx-20 md:mx-40 mt-2 font-bold mb-4 bg-white border w-36 text-center py-2 rounded-full"> <i class="fa-solid fa-arrow-right"></i> About Us</p>
           <!-- div-1 -->
         </div>
 
